--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -163,7 +163,7 @@ body {
 
 .home .texto {
   justify-content: flex-start;
-  margin: 0 8rem 0 6rem;
+  margin: -1.5rem 8rem 0 6rem;
   background: radial-gradient(
     50% 100% at top,
     rgba(145, 32, 138, 0.5),
@@ -193,6 +193,7 @@ body {
 }
 
 .img {
+  margin-top: -1.5rem;
   max-width: 30rem;
   height: auto;
   margin-right: auto;
@@ -203,11 +204,51 @@ body {
   margin-top: -130px;
 }
 
+.fotos-titulo {
+  font-family: "Orbitron", sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 1rem;
+  margin-right: 30rem;
+  margin-bottom: 1rem;
+  color: #30e9f4;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  background: radial-gradient(
+    50% 100% at top,
+    rgba(145, 32, 138, 0.5),
+    rgba(9, 26, 79, 1)
+  );
+}
+
 .slides {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-left: 8rem;
+}
+
+.slide {
+  position: relative;
+  display: inline-block;
+}
+
+.slide .texto-imagem {
+  font-family: "Orbitron", sans-serif;
+  background-color: #03e9f4;
+  color: #000;
+  position: absolute;
+  top: 90%;
+  left: 73%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  text-wrap: nowrap;
+  padding: 0.1rem;
+}
+
+.slide:hover .texto-imagem {
+  opacity: 1;
 }
 
 .slide img {
@@ -219,21 +260,10 @@ body {
 }
 
 .slide img:hover {
-  transform: scale(1.8);
+  transform: scale(1.7);
   cursor: pointer;
   box-shadow: 0 0 10px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4,
     0 0 200px #03e9f4;
-}
-
-.fotos-titulo {
-  font-family: "Orbitron", sans-serif;
-  font-size: 2rem;
-  text-align: center;
-  margin-right: 30rem;
-  margin-bottom: 0.2rem;
-  color: #30e9f4;
-  text-transform: uppercase;
-  letter-spacing: 5px;
 }
 
 .footer {
@@ -274,4 +304,29 @@ body {
   border-radius: 2px;
   box-shadow: 0 0 50px #03e9f4;
   padding: 5px;
+}
+
+@media screen and (min-width: 1728px) {
+  .carousel {
+    margin-top: -6rem;
+    margin-right: auto;
+    margin-bottom: 0.5rem;
+  }
+
+  .slides {
+    margin-left: 3rem;
+    margin-top: 5rem;
+  }
+
+  .slide img {
+    margin-left: 7rem;
+    max-width: 8rem;
+  }
+  .fotos-titulo {
+    margin-top: -20rem;
+  }
+
+  .img {
+    height: 40rem;
+  }
 }
