--- a/src/main/resources/static/usuario/styles-usuario/index-usuario.css
+++ b/src/main/resources/static/usuario/styles-usuario/index-usuario.css
@@ -300,7 +300,7 @@ body {
 }
 
 /* Telas menores que 640px */
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 600px) {
   .cabecalho {
     padding: 0.5rem;
     height: auto;
@@ -329,13 +329,16 @@ body {
   }
 
   .container-box {
-    width: 90%; /* Reduzindo a largura do container */
-    padding: 1em; /* Espaçamento interno menor */
+   width: 50%;
+       max-width: 50%;
+       padding: 0.3em;
+       overflow-y: auto;
+       margin-top: 56px;
   }
 
   .container-texto {
-    font-size: 24px; /* Reduzindo o tamanho do texto */
-    margin-top: 15%; /* Ajuste menor de margem superior */
+    font-size: 24px;
+    margin-top: 15%;
   }
 
   .campo-container {
@@ -345,13 +348,13 @@ body {
   }
 
   .novo-chamado, .vizualizar-chamados {
-    width: 70%; /* Reduzindo a largura dos elementos */
-    margin-bottom: 1em; /* Adicionando margem inferior */
+    width: 70%;
+    margin-bottom: 1em;
   }
 
   .novo-chamado p, .vizualizar-chamados p {
-    font-size: 16px; /* Reduzindo o tamanho do texto */
-    margin-top: 0.5em; /* Ajustando margem superior */
+    font-size: 16px;
+    margin-top: 0.5em;
   }
 
   body {
@@ -361,23 +364,27 @@ body {
 
 
 /* Telas de 641px até 1007px */
-@media screen and (min-width: 641px) and (max-width: 1007px) {
-  .cabecalho {
-    padding: 1rem;
-    height: 6rem;
+@media screen and (min-width: 601px) and (max-width: 1007px) {
+ .cabecalho {
+    padding: 0.5rem;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .logo img {
-    max-width: 100px;
+    max-width: 60px;
   }
 
   .titulo {
-    margin-left: 1rem;
-    flex-grow: 1;
+    margin-top: 0.5rem;
+    text-align: center;
   }
 
   .titulo h1 {
-    font-size: 30px;
+    font-size: 28px;
+    margin-top: 5px;
   }
 
 
@@ -385,17 +392,46 @@ body {
     display: none;
   }
 
+  .container-box {
+   width: 50%;
+       max-width: 50%;
+       padding: 0.3em;
+       overflow-y: auto;
+       margin-top: 56px;
+  }
+
+  .container-texto {
+    font-size: 28px;
+    margin-top: 15%;
+  }
+
+  .campo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .novo-chamado, .vizualizar-chamados {
+    width: 70%;
+    margin-bottom: 1em;
+  }
+
+  .novo-chamado p, .vizualizar-chamados p {
+    font-size: 16px;
+    margin-top: 0.5em;
+  }
+
   body {
     padding-bottom: 6rem;
   }
 }
-
 
 /* Telas maiores que 1008px */
 @media screen and (min-width: 1008px) {
   .cabecalho {
     padding: 1rem;
     height: 6rem;
+
   }
 
   .logo img {
@@ -408,7 +444,7 @@ body {
   }
 
   .titulo h1 {
-    font-size: 36px;
+    font-size: 32px;
   }
 
   .cabecalhoMenu {
@@ -421,6 +457,10 @@ body {
     height: 2px;
     background: #fff;
     margin: 4px;
+  }
+.container-box {
+
+    margin-top: 25px;
   }
 
   body {
