--- a/src/main/resources/templates/usuario.chamados.html
+++ b/src/main/resources/templates/usuario.chamados.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" type="text/css" href="../static/usuario/styles-usuario/usuario.chamado.css" />
+    <link rel="stylesheet" type="text/css" href="styles/usuario.chamado.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,13 +17,13 @@
             rel="stylesheet" />
 
     <title>Portal Tech</title>
-    <link rel="icon" href="/static/images/logo.jpeg" />
+    <link rel="icon" href="/static/styles/images/logo.jpeg" />
 </head>
 
 <body>
 <header class="cabecalho">
     <div class="logo">
-        <img src="/static/images/logo.jpeg" alt="logo Portal Tech" />
+        <img src="/static/styles/images/logo.jpeg" alt="logo Portal Tech" />
     </div>
     <div class="titulo">
         <span></span>
@@ -88,7 +88,7 @@
                     </table>
                 </div>
                 <div class="return-index" style="margin-top: 250px;">
-                    <p><a href="index.usuario.html"><img class="color-image" src="../static/usuario/imagens/voltar.png" /></a>Voltar para tela inicial</p>
+                    <p><a href="index.usuario.html"><img class="color-image" src="styles/images/voltar.png" /></a>Voltar para tela inicial</p>
                 </div>
             </section>
         </main>
@@ -99,7 +99,7 @@
     <div class="container">
         <div class="footer-content">
             <div class="github">
-                <img src="/static/images/github.png" alt="GitHub Logo" class="github-img" />
+                <img src="/static/styles/images/github.png" alt="GitHub Logo" class="github-img" />
             </div>
             <div class="github-links">
                 <a href="https://github.com/keilaarakaki">Keila Arakaki</a>
