--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" type="text/css" href="/templates/styles/login.css" />
+    <link rel="stylesheet" type="text/css" href="/static/styles/login.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -99,7 +99,7 @@
                             </p>
                         </div>
                         <div class="return-index" style="margin-top: 30px;">
-                            <p><a href="../static/index.html"><img class="color-image" src="/templates/styles/images/voltar.png" /></a>Voltar para tela inicial</p>
+                            <p><a href="/static/index.html"><img class="color-image" src="/static/styles/images/voltar.png" /></a>Voltar para tela inicial</p>
                         </div>
                     </form>
                 </div>
@@ -109,7 +109,7 @@
         </main>
 
 
-        <img src="../static/styles/images/persona.jpeg" class="img" />
+        <img src="/static/styles/images/persona.jpeg" class="img" />
     </div>
 </section>
 
