--- a/src/main/resources/templates/usuario.chamados.html
+++ b/src/main/resources/templates/usuario.chamados.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" type="text/css" href="styles/usuario.chamado.css" />
+    <link rel="stylesheet" type="text/css" href="../static/styles/usuario.chamado.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -88,7 +88,7 @@
                     </table>
                 </div>
                 <div class="return-index" style="margin-top: 250px;">
-                    <p><a href="index.usuario.html"><img class="color-image" src="styles/images/voltar.png" /></a>Voltar para tela inicial</p>
+                    <p><a href="index.usuario.html"><img class="color-image" src="../static/styles/images/voltar.png" /></a>Voltar para tela inicial</p>
                 </div>
             </section>
         </main>
