--- a/src/main/resources/templates/usuario.admin.html
+++ b/src/main/resources/templates/usuario.admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8" />
