--- a/src/main/resources/templates/usuario.chamados.html
+++ b/src/main/resources/templates/usuario.chamados.html
@@ -47,12 +47,12 @@
                     <table class="tabela">
                         <thead>
                         <tr>
+                            <th>Data de Abertura</th>
                             <th>Usuário</th>
                             <th>Setor</th>
-                            <th>Descrição</th>
                             <th>Prioridade</th>
-                            <th>Data da Abertura do Chamado</th>
-                            <th>Data de Finalização do Chamado</th>
+                            <th>Descrição</th>
+                            <th>Data da Finalização </th>
                         </tr>
                         </thead>
                         <tbody>
