--- a/src/main/resources/templates/index.usuario.html
+++ b/src/main/resources/templates/index.usuario.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" type="text/css" href="../static/styles/index-usuario.css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/index-usuario.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,13 +17,13 @@
             rel="stylesheet" />
 
     <title>Portal Tech</title>
-    <link rel="icon" href="/static/styles/images/logo.jpeg" />
+    <link rel="icon" href="/styles/images/logo.jpeg" />
 </head>
 
 <body>
 <header class="cabecalho">
     <div class="logo">
-        <img src="/static/styles/images/logo.jpeg" alt="logo Portal Tech" />
+        <img src="/styles/images/logo.jpeg" alt="logo Portal Tech" />
     </div>
     <div class="titulo">
         <span></span>
@@ -38,6 +38,7 @@
 </header>
 
 <section class="home">
+
     <div class="container-principal">
 
 
@@ -49,13 +50,13 @@
                 <div class="campo-container">
 
                     <div class="novo-chamado">
-                        <a href="usuario.novo.chamado.html"><img class="color-image" src="../static/styles/images/novo-chamado.png" /></a>
+                        <a href="/usuario/novo/chamado"><img class="color-image" src="/styles/images/novo-chamado.png" /></a>
                         <p>Criar Novo Chamado
                         </p>
                     </div>
 
                     <div class="vizualizar-chamados">
-                        <a href="usuario.chamados.html"><img class="color-image" src="../static/styles/images/vizualizar-chamados.png" /></a>
+                        <a href="/usuario/chamados"><img class="color-image" src="/styles/images/vizualizar-chamados.png" /></a>
                         <p>Visualizar Chamados Criados</p>
                     </div>
                 </div>
@@ -71,7 +72,7 @@
     <div class="container">
         <div class="footer-content">
             <div class="github">
-                <img src="/static/styles/images/github.png" alt="GitHub Logo" class="github-img" />
+                <img src="/styles/images/github.png" alt="GitHub Logo" class="github-img" />
             </div>
             <div class="github-links">
                 <a href="https://github.com/keilaarakaki">Keila Arakaki</a>
