--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <link rel="stylesheet" type="text/css" href="/static/styles/login.css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/login.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
@@ -19,13 +19,13 @@
             rel="stylesheet"/>
 
     <title>Portal Tech</title>
-    <link rel="icon" href="../static/styles/images/logo.jpeg"/>
+    <link rel="icon" href="/styles/images/logo.jpeg"/>
 </head>
 
 <body>
 <header class="cabecalho">
     <div class="logo">
-        <img src="/static/styles/images/logo.jpeg" alt="logo Portal Tech"/>
+        <img src="/styles/images/logo.jpeg" alt="logo Portal Tech"/>
     </div>
     <div class="titulo">
         <span></span>
@@ -115,7 +115,7 @@
         </main>
 
 
-        <img src="/static/styles/images/persona2.jpeg" class="img"/>
+        <img src="/styles/images/persona2.jpeg" class="img"/>
     </div>
 </section>
 
@@ -123,14 +123,14 @@
     <div class="container">
         <div class="footer-content">
             <div class="github">
-                <img src="../static/styles/images/github.png" alt="GitHub Logo" class="github-img"/>
+                <img src="/styles/images/github.png" alt="GitHub Logo" class="github-img"/>
             </div>
             <div class="github-links">
-                <a href="https://github.com/keilaarakaki">Keila Arakaki</a>
+                <a href="https://github.com/alineadcosta95">Aline Alves </a>
                 <a href="https://github.com/ElisIrons">Elis Rodrigues</a>
+                <a href="https://github.com/keilaarakaki">Keila Arakaki</a>
                 <a href="https://github.com/nayarakarinearaujo">Nayara Karine</a>
-                <a href="#">Thais Abe </a>
-                <a href="#">Aline Alves </a>
+                <a href="https://github.com/Thais-Abe">Thais Abe </a>
             </div>
         </div>
     </div>
