--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -70,90 +70,6 @@ body {
     0 0 200px #03e9f4;
 }
 
-.cabecalhoMenu a span {
-  position: absolute;
-  display: block;
-}
-
-.cabecalhoMenu a span:nth-child(1) {
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(90deg, transparent, #03e9f4);
-  animation: btn-anim1 1s linear infinite;
-}
-
-@keyframes btn-anim1 {
-  0% {
-    left: -100%;
-  }
-  50%,
-  100% {
-    left: 100%;
-  }
-}
-
-.cabecalhoMenu span:nth-child(2) {
-  top: -100%;
-  right: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(180deg, transparent, #03e9f4);
-  animation: btn-anim2 1s linear infinite;
-  animation-delay: 0.25s;
-}
-
-@keyframes btn-anim2 {
-  0% {
-    top: -100%;
-  }
-  50%,
-  100% {
-    top: 100%;
-  }
-}
-
-.cabecalhoMenu span:nth-child(3) {
-  bottom: 0;
-  right: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(270deg, transparent, #03e9f4);
-  animation: btn-anim3 1s linear infinite;
-  animation-delay: 0.5s;
-}
-
-@keyframes btn-anim3 {
-  0% {
-    right: -100%;
-  }
-  50%,
-  100% {
-    right: 100%;
-  }
-}
-
-.cabecalhoMenu span:nth-child(4) {
-  bottom: -100%;
-  left: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(360deg, transparent, #30e9f4);
-  animation: btn-anim4 1s linear infinite;
-  animation-dealy: 0.75s;
-}
-
-@keyframes btn-anim4 {
-  0% {
-    bottom: -100%;
-  }
-  50%,
-  100% {
-    bottom: 100%;
-  }
-}
-
 .home .container {
   display: flex;
   flex-direction: row;
@@ -273,7 +189,7 @@ body {
     rgb(145, 32, 138),
     rgb(9, 26, 79)
   );
-  padding: 0.5rem;
+  padding: 0.1rem;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -323,10 +239,17 @@ body {
     max-width: 8rem;
   }
   .fotos-titulo {
-    margin-top: -20rem;
+    margin-top: -15rem;
   }
 
+  .home .container {
+    margin: 3rem 4rem 3rem 5rem;
+  }
+
+.home .texto {
+  margin: -1.5rem 10rem 5rem 6rem;
+}
   .img {
-    height: 40rem;
+    max-width: 35rem;
   }
 }
