--- a/src/main/resources/static/styles/index-usuario.css
+++ b/src/main/resources/static/styles/index-usuario.css
@@ -19,13 +19,15 @@ body {
   background-position: center;
   background-attachment: fixed;
   font-family: 'Roboto Mono', sans-serif;
-  font-weight: 700;
+  opacity: 95%;
 }
 
 .cabecalho {
-  background: radial-gradient(50% 100% at bottom center,
-      rgb(145, 32, 138),
-      rgb(11, 22, 40));
+  background: radial-gradient(
+    50% 100% at bottom center,
+    rgb(145, 32, 138),
+    rgb(9, 26, 79)
+  );
   display: flex;
   align-items: center;
   padding: 1rem;
@@ -33,16 +35,12 @@ body {
 }
 
 .logo img {
-    margin-right: auto;
-    max-width: 5rem;
-    height: auto;
-    border-radius: 100px;
-    box-shadow: 1px 0 1px #03e9f4, 0 0 5px #03e9f4, 0 0 10px #03e9f4,
-        0 0 550px #03e9f4;
-}
-.titulo {
-  flex-grow: 1;
-  text-align: center;
+  margin-right: auto;
+  max-width: 5rem;
+  height: auto;
+  border-radius: 100px;
+  box-shadow: 1px 0 1px #03e9f4, 0 0 5px #03e9f4, 0 0 10px #03e9f4,
+    0 0 550px #03e9f4;
 }
 
 .cabecalhoMenu {
@@ -51,11 +49,11 @@ body {
 
 .titulo {
   font-family: "Orbitron", sans-serif;
-  letter-spacing: 100px;
-  font-size: 50px;
-  font-weight: 700;
-  color: #14fff1;
-  text-shadow: 0 0 8px rgba(255, 255, 255, 0.3), 0 0 29px #14fff1;
+  letter-spacing: 5rem;
+  color: #03e9f4;
+  text-shadow: 0 0 29px #03e9f4;
+  flex-grow: 1;
+  text-align: center;
 }
 
 .cabecalhoMenu a,
@@ -77,8 +75,8 @@ body {
   background: #03e9f4;
   color: #f1eee6;
   border-radius: 5px;
-  box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
-    0 0 100px #03e9f4;
+  box-shadow: 0 0 10px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4,
+    0 0 200px #03e9f4;
 }
 
 .cabecalhoMenu a span {
@@ -99,7 +97,6 @@ body {
   0% {
     left: -100%;
   }
-
   50%,
   100% {
     left: 100%;
@@ -120,7 +117,6 @@ body {
   0% {
     top: -100%;
   }
-
   50%,
   100% {
     top: 100%;
@@ -129,7 +125,7 @@ body {
 
 .cabecalhoMenu span:nth-child(3) {
   bottom: 0;
-  tight: -100%;
+  right: -100%;
   width: 100%;
   height: 2px;
   background: linear-gradient(270deg, transparent, #03e9f4);
@@ -141,7 +137,6 @@ body {
   0% {
     right: -100%;
   }
-
   50%,
   100% {
     right: 100%;
@@ -162,48 +157,10 @@ body {
   0% {
     bottom: -100%;
   }
-
   50%,
   100% {
     bottom: 100%;
   }
-}
-
-.home .container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 1rem 0 0 1rem;
-}
-
-.home .texto {
-  flex-grow: 1;
-  text-align: center;
-  font-size: 1.1rem;
-}
-
-.home .texto h1 {
-  font-size: 50px;
-  margin-bottom: 80px;
-}
-
-.home .texto p {
-  flex-grow: 1;
-  margin-left: 8px;
-  text-align: left;
-  font-size: 1.4rem;
-  font-weight: 400;
-  padding: 0 20px;
-  color: #0c0c0c;
-}
-
-.home .texto h1 {
-  font-size: 2rem;
-  white-space: nowrap;
-  margin-bottom: 60px;
-  text-align: center;
-  padding: 20px 0;
-  color: rgb(83, 181, 181);
 }
 
 
@@ -240,10 +197,12 @@ body {
 }
 
 .container-texto {
-  font-size: 40px;
-  color: #03e9f4;
+font-family:"Orbitron", sans-serif;
+   font-size: 3rem;
+   color: rgb(9, 26, 79);
+   -webkit-text-stroke: 0.5px#03e9f4;
+   text-stroke: 0.5px #03e9f4;
   text-align: center;
-  font-size: 40px;
   margin-top: -10%;
   margin-bottom: 20px;
 }
@@ -260,13 +219,13 @@ body {
 
 
 
-/*Seção do footer*/
-
 .footer {
   font-family: "Orbitron", sans-serif;
-  background: radial-gradient(100% 100% at bottom center,
-      rgb(145, 32, 138),
-      rgb(11, 22, 40));
+  background: radial-gradient(
+    100% 100% at top center,
+    rgb(145, 32, 138),
+    rgb(9, 26, 79)
+  );
   padding: 0.5rem;
   position: fixed;
   bottom: 0;
@@ -277,6 +236,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .github-img {
@@ -298,172 +258,3 @@ body {
   box-shadow: 0 0 50px #03e9f4;
   padding: 5px;
 }
-
-/* Telas menores que 640px */
-@media screen and (max-width: 600px) {
-  .cabecalho {
-    padding: 0.5rem;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .logo img {
-    max-width: 60px;
-  }
-
-  .titulo {
-    margin-top: 0.5rem;
-    text-align: center;
-  }
-
-  .titulo h1 {
-    font-size: 20px;
-    margin-top: 5px;
-  }
-
-
-  .cabecalhoMenu {
-    display: none;
-  }
-
-  .container-box {
-   width: 50%;
-       max-width: 50%;
-       padding: 0.3em;
-       overflow-y: auto;
-       margin-top: 56px;
-  }
-
-  .container-texto {
-    font-size: 24px;
-    margin-top: 15%;
-  }
-
-  .campo-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .novo-chamado, .vizualizar-chamados {
-    width: 70%;
-    margin-bottom: 1em;
-  }
-
-  .novo-chamado p, .vizualizar-chamados p {
-    font-size: 16px;
-    margin-top: 0.5em;
-  }
-
-  body {
-    padding-bottom: 6rem;
-  }
-}
-
-
-/* Telas de 641px até 1007px */
-@media screen and (min-width: 601px) and (max-width: 1007px) {
- .cabecalho {
-    padding: 0.5rem;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .logo img {
-    max-width: 60px;
-  }
-
-  .titulo {
-    margin-top: 0.5rem;
-    text-align: center;
-  }
-
-  .titulo h1 {
-    font-size: 28px;
-    margin-top: 5px;
-  }
-
-
-  .cabecalhoMenu {
-    display: none;
-  }
-
-  .container-box {
-   width: 50%;
-       max-width: 50%;
-       padding: 0.3em;
-       overflow-y: auto;
-       margin-top: 56px;
-  }
-
-  .container-texto {
-    font-size: 28px;
-    margin-top: 15%;
-  }
-
-  .campo-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .novo-chamado, .vizualizar-chamados {
-    width: 70%;
-    margin-bottom: 1em;
-  }
-
-  .novo-chamado p, .vizualizar-chamados p {
-    font-size: 16px;
-    margin-top: 0.5em;
-  }
-
-  body {
-    padding-bottom: 6rem;
-  }
-}
-
-/* Telas maiores que 1008px */
-@media screen and (min-width: 1008px) {
-  .cabecalho {
-    padding: 1rem;
-    height: 6rem;
-
-  }
-
-  .logo img {
-    max-width: 140px;
-  }
-
-  .titulo {
-    margin-left: 1rem;
-    flex-grow: 1;
-  }
-
-  .titulo h1 {
-    font-size: 32px;
-  }
-
-  .cabecalhoMenu {
-    display: flex;
-    margin-right: 1rem;
-  }
-
-  .cabecalhoMenu span {
-    width: 25px;
-    height: 2px;
-    background: #fff;
-    margin: 4px;
-  }
-.container-box {
-
-    margin-top: 25px;
-  }
-
-  body {
-    padding-bottom: 6rem;
-  }
-}}
