--- a/src/main/resources/static/styles/usuario.chamado.css
+++ b/src/main/resources/static/styles/usuario.chamado.css
@@ -5,7 +5,6 @@
 }
 
 :root {
-
   --primeira-cor: #c6c3c3;
   --segunda-cor: #ffffff;
   --black-cor: #000000;
@@ -18,14 +17,16 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  font-family: 'Roboto Mono', sans-serif;
-  font-weight: 700;
+  font-family: "Roboto Mono", sans-serif;
+  opacity: 95%;
 }
 
 .cabecalho {
-  background: radial-gradient(50% 100% at bottom center,
-      rgb(145, 32, 138),
-      rgb(11, 22, 40));
+  background: radial-gradient(
+    50% 100% at bottom center,
+    rgb(145, 32, 138),
+    rgb(11, 22, 40)
+  );
   display: flex;
   align-items: center;
   padding: 1rem;
@@ -46,128 +47,20 @@ body {
   text-align: center;
 }
 
-.cabecalhoMenu {
-  display: flex;
-}
-
 .titulo {
   font-family: "Orbitron", sans-serif;
-  letter-spacing: 100px;
-  font-size: 50px;
+
+  font-size: 16px;
   font-weight: 700;
   color: #14fff1;
   text-shadow: 0 0 8px rgba(255, 255, 255, 0.3), 0 0 29px #14fff1;
-}
-
-.cabecalhoMenu a,
-.titulo {
   position: relative;
   display: inline-block;
   padding: 10px 20px;
   color: #03e9f4;
-  font-size: 16px;
-  text-decoration: none;
   text-transform: uppercase;
-  overflow: hidden;
-  transition: 0.5s;
   margin-top: 5px;
   letter-spacing: 4px;
-}
-
-.cabecalhoMenu a:hover {
-  background: #03e9f4;
-  color: #f1eee6;
-  border-radius: 5px;
-  box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
-    0 0 100px #03e9f4;
-}
-
-.cabecalhoMenu a span {
-  position: absolute;
-  display: block;
-}
-
-.cabecalhoMenu a span:nth-child(1) {
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(90deg, transparent, #03e9f4);
-  animation: btn-anim1 1s linear infinite;
-}
-
-@keyframes btn-anim1 {
-  0% {
-    left: -100%;
-  }
-
-  50%,
-  100% {
-    left: 100%;
-  }
-}
-
-.cabecalhoMenu span:nth-child(2) {
-  top: -100%;
-  right: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(180deg, transparent, #03e9f4);
-  animation: btn-anim2 1s linear infinite;
-  animation-delay: 0.25s;
-}
-
-@keyframes btn-anim2 {
-  0% {
-    top: -100%;
-  }
-
-  50%,
-  100% {
-    top: 100%;
-  }
-}
-
-.cabecalhoMenu span:nth-child(3) {
-  bottom: 0;
-  tight: -100%;
-  width: 100%;
-  height: 2px;
-  background: linear-gradient(270deg, transparent, #03e9f4);
-  animation: btn-anim3 1s linear infinite;
-  animation-delay: 0.5s;
-}
-
-@keyframes btn-anim3 {
-  0% {
-    right: -100%;
-  }
-
-  50%,
-  100% {
-    right: 100%;
-  }
-}
-
-.cabecalhoMenu span:nth-child(4) {
-  bottom: -100%;
-  left: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(360deg, transparent, #30e9f4);
-  animation: btn-anim4 1s linear infinite;
-  animation-dealy: 0.75s;
-}
-
-@keyframes btn-anim4 {
-  0% {
-    bottom: -100%;
-  }
-
-  50%,
-  100% {
-    bottom: 100%;
-  }
 }
 
 .home .container {
@@ -176,37 +69,6 @@ body {
   align-items: center;
   margin: 1rem 0 0 1rem;
 }
-
-.home .texto {
-  flex-grow: 1;
-  text-align: center;
-  font-size: 1.1rem;
-}
-
-.home .texto h1 {
-  font-size: 50px;
-  margin-bottom: 80px;
-}
-
-.home .texto p {
-  flex-grow: 1;
-  margin-left: 8px;
-  text-align: left;
-  font-size: 1.4rem;
-  font-weight: 400;
-  padding: 0 20px;
-  color: #0c0c0c;
-}
-
-.home .texto h1 {
-  font-size: 2rem;
-  white-space: nowrap;
-  margin-bottom: 60px;
-  text-align: center;
-  padding: 20px 0;
-  color: rgb(83, 181, 181);
-}
-
 
 .header {
   position: absolute;
@@ -232,9 +94,12 @@ body {
   border-radius: 15px;
   padding: 7.5em 2.5em 2em 2.5em;
   color: var(--segunda-cor);
-  background: radial-gradient(100% 100% at bottom center,
-      rgb(145, 32, 138),
-      rgb(18, 28, 90), rgb(145, 32, 138));
+  background: radial-gradient(
+    100% 100% at bottom center,
+    rgb(145, 32, 138),
+    rgb(18, 28, 90),
+    rgb(145, 32, 138)
+  );
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -257,14 +122,12 @@ body {
   margin-bottom: 20px;
 }
 
-
 .campo-container {
   display: flexbox;
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
   text-align: center;
-
 }
 
 .campo {
@@ -291,10 +154,9 @@ body {
   color: var(--black-cor);
 }
 
-#descricao{
+#descricao {
   width: 100%;
   height: 100px;
-
 }
 
 .salvar {
@@ -317,7 +179,6 @@ body {
   color: var(--black-cor);
 }
 
-
 .return-index {
   display: flex;
   justify-content: flex-start;
@@ -332,11 +193,8 @@ body {
   text-decoration: none;
   color: white;
   font-size: 12px;
-    margin-top: 60px;
-
+  margin-top: 60px;
 }
-
-
 
 /*Seção da tabela do Usuário chamados*/
 
@@ -351,12 +209,12 @@ body {
   overflow: hidden;
 }
 
-.tabela th, .tabela td {
+.tabela th,
+.tabela td {
   border: 1px solid #ddd;
   padding: 12px;
   text-align: left;
-    background-color: var(--segunda-cor);
-
+  background-color: var(--segunda-cor);
 }
 
 .tabela th {
@@ -400,15 +258,15 @@ body {
   width: 12%;
 }
 
-
-
 /*Seção do footer*/
 
 .footer {
   font-family: "Orbitron", sans-serif;
-  background: radial-gradient(100% 100% at bottom center,
-      rgb(145, 32, 138),
-      rgb(11, 22, 40));
+  background: radial-gradient(
+    100% 100% at bottom center,
+    rgb(145, 32, 138),
+    rgb(11, 22, 40)
+  );
   padding: 0.5rem;
   position: fixed;
   bottom: 0;
@@ -440,93 +298,3 @@ body {
   box-shadow: 0 0 50px #03e9f4;
   padding: 5px;
 }
-
-/* Adicione as regras de estilo abaixo de 700px */
-
-@media only screen and (max-width: 700px) {
-  .cabecalho {
-    height: auto;
-    padding: 0.5rem;
-  }
-
-  .logo img {
-    max-width: 4rem;
-  }
-
-  .titulo {
-    font-size: 30px;
-  }
-
-  .cabecalhoMenu a,
-  .titulo {
-    padding: 8px 15px;
-    font-size: 14px;
-    letter-spacing: 2px;
-  }
-
-  .home .texto h1 {
-    font-size: 40px;
-    margin-bottom: 60px;
-  }
-
-  .container-box {
-    width: 90%;
-    height: auto;
-    max-width: 400px;
-    padding: 4em 1.5em 1em 1.5em;
-  }
-
-  .container-texto {
-    font-size: 24px;
-    margin-top: -10%;
-    margin-bottom: 10px;
-  }
-
-  .container-subtitulo {
-    font-size: 20px;
-  }
-
-  .campo-container input[type="text"],
-  .campo-container textarea,
-  .campo-container select {
-    font-size: 14px;
-    height: 35px;
-  }
-
-  #descricao {
-    height: 80px;
-  }
-
-  .salvar {
-    height: 35px;
-    font-size: 14px;
-  }
-
-  .return-index p {
-    margin-top: 30px;
-    font-size: 10px;
-  }
-
-.tabela-container {
-  overflow-x: auto; /* Adiciona uma barra de rolagem horizontal quando necessário */
-    }
-
-.tabela {
-  width: 100%; /* Garante que a tabela ocupe todo o espaço disponível */
-    }
-
-.tabela th,
-.tabela td {
-  padding: 6px;
-  font-size: 12px; /* Reduz o tamanho da fonte para melhor ajuste */
-    }
-
-.tabela th:nth-child(3),
-.tabela td:nth-child(3) {
-  width: 100%; /* Ajusta a largura da coluna principal para ocupar toda a largura disponível */
-  text-align: center; /* Centraliza o conteúdo da coluna principal */
-    }
-
-}
-
-
