--- a/src/main/resources/templates/index.usuario.html
+++ b/src/main/resources/templates/index.usuario.html
@@ -26,14 +26,16 @@
         <img src="/styles/images/logo.jpeg" alt="logo Portal Tech" />
     </div>
     <div class="titulo">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-
+        <a href="index.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            INÍCIO
+        </a>
     </nav>
 </header>
 
@@ -75,11 +77,11 @@
                 <img src="/styles/images/github.png" alt="GitHub Logo" class="github-img" />
             </div>
             <div class="github-links">
-                <a href="https://github.com/keilaarakaki">Keila Arakaki</a>
+                <a href="https://github.com/alineadcosta95">Aline Alves </a>
                 <a href="https://github.com/ElisIrons">Elis Rodrigues</a>
+                <a href="https://github.com/keilaarakaki">Keila Arakaki</a>
                 <a href="https://github.com/nayarakarinearaujo">Nayara Karine</a>
-                <a href="#">Thais Abe </a>
-                <a href="#">Aline Alves </a>
+                <a href="https://github.com/Thais-Abe">Thais Abe </a>
             </div>
         </div>
     </div>
