Organização códigos html/css e criação página do técnico

--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -38,7 +38,7 @@
             <span></span>
             <span></span>
             <span></span>
-            INÍCIO
+            HOME
         </a>
     </nav>
 </header>
