--- a/src/main/resources/templates/index.usuario.html
+++ b/src/main/resources/templates/index.usuario.html
@@ -34,7 +34,7 @@
             <span></span>
             <span></span>
             <span></span>
-            INÍCIO
+            HOME
         </a>
     </nav>
 </header>
