--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
             <span></span>
             <span></span>
             <span></span>
-            INÍCIO
+            HOME
         </a>
     </nav>
 </header>
