--- a/src/main/resources/templates/usuario.chamados.html
+++ b/src/main/resources/templates/usuario.chamados.html
@@ -26,15 +26,16 @@
         <img src="/styles/images/logo.jpeg" alt="logo Portal Tech" />
     </div>
     <div class="titulo">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
         <h1>Portal Tech</h1>
     </div>
     <nav class="cabecalhoMenu">
-
-    </nav>
+        <a href="index.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            HOME
+        </a>
 </header>
 
 <section class="home">
@@ -65,26 +66,6 @@
                             <td></td>
                         </tr>
                         </tbody>
-                        <tbody>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        </tbody>
-                        <tbody>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        </tbody>
                     </table>
                 </div>
                 <div class="return-index" style="margin-top: 250px;">
@@ -102,17 +83,15 @@
                 <img src="/styles/images/github.png" alt="GitHub Logo" class="github-img" />
             </div>
             <div class="github-links">
-                <a href="https://github.com/keilaarakaki">Keila Arakaki</a>
+                <a href="https://github.com/alineadcosta95">Aline Alves </a>
                 <a href="https://github.com/ElisIrons">Elis Rodrigues</a>
+                <a href="https://github.com/keilaarakaki">Keila Arakaki</a>
                 <a href="https://github.com/nayarakarinearaujo">Nayara Karine</a>
-                <a href="#">Thais Abe </a>
-                <a href="#">Aline Alves </a>
+                <a href="https://github.com/Thais-Abe">Thais Abe </a>
             </div>
         </div>
     </div>
 </footer>
 </body>
-
-</html>
 
 </html>
