--- a/src/main/resources/static/styles/usuario.chamado.css
+++ b/src/main/resources/static/styles/usuario.chamado.css
@@ -49,7 +49,6 @@ body {
 
 .titulo {
   font-family: "Orbitron", sans-serif;
-
   font-size: 16px;
   font-weight: 700;
   color: #14fff1;
@@ -63,6 +62,119 @@ body {
   letter-spacing: 4px;
 }
 
+.cabecalhoMenu {
+    display: flex;
+}
+
+.cabecalhoMenu a {
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #03e9f4;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: 0.5s;
+    margin-top: 5px;
+    letter-spacing: 4px;
+}
+
+.cabecalhoMenu a:hover {
+background: #03e9f4;
+color: #f1eee6;
+border-radius:5px;
+box-shadow: 0 0 10px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4, 0 0 200px #03e9f4;
+}
+
+.cabecalhoMenu a span {
+  position: absolute;
+  display: block;
+}
+
+.cabecalhoMenu a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+  animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+    0% {
+        left: -100%;
+    }
+
+    50%,
+    100% {
+        left: 100%;
+    }
+}
+
+.cabecalhoMenu span:nth-child(2) {
+    top: -100%;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg, transparent, #03e9f4);
+    animation: btn-anim2 1s linear infinite;
+    animation-delay: 0.25s;
+}
+
+@keyframes btn-anim2 {
+    0% {
+        top: -100%;
+    }
+
+    50%,
+    100% {
+        top: 100%;
+    }
+}
+
+.cabecalhoMenu span:nth-child(3) {
+    bottom: 0;
+    tight: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg, transparent, #03e9f4);
+    animation: btn-anim3 1s linear infinite;
+    animation-delay: 0.5s;
+}
+
+@keyframes btn-anim3 {
+    0% {
+        right: -100%;
+    }
+
+    50%,
+    100% {
+        right: 100%;
+    }
+}
+
+.cabecalhoMenu span:nth-child(4) {
+    bottom: -100%;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg, transparent, #30e9f4);
+    animation: btn-anim4 1s linear infinite;
+    animation-dealy: 0.75s;
+}
+
+@keyframes btn-anim4 {
+    0% {
+        bottom: -100%;
+    }
+
+    50%,
+    100% {
+        bottom: 100%;
+    }
+}
+
 .home .container {
   display: flex;
   flex-direction: row;
@@ -70,29 +182,14 @@ body {
   margin: 1rem 0 0 1rem;
 }
 
-.header {
-  position: absolute;
-  top: 80px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 140px;
-  height: 70px;
-  border-radius: 0 0 20px 20px;
-  color: var(--segunda-cor);
-}
-
 .container-box {
-  position: fixed;
-  width: 750px;
-  height: 700px;
-
+position:fixed;
+  width: 850px;
+  height: 560px;
   backdrop-filter: blur(25px);
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
-  padding: 7.5em 2.5em 2em 2.5em;
+  padding: 5rem;
   color: var(--segunda-cor);
   background: radial-gradient(
     100% 100% at bottom center,
@@ -101,25 +198,27 @@ body {
     rgb(145, 32, 138)
   );
   left: 50%;
-  top: 50%;
+  top: 24rem;
   transform: translate(-50%, -50%);
 }
 
 .container-texto {
-  font-size: 30px;
-  color: #03e9f4;
+  font-family: "Orbitron", sans-serif;
+    font-size: 3rem;
+    color: rgb(9, 26, 79);
+    -webkit-text-stroke: 0.5px #03e9f4;
+    text-stroke: 0.5px #03e9f4;
   text-align: center;
-  font-size: 40px;
-  margin-top: -15%;
-  margin-bottom: 20px;
+  margin-top: -10%;
+  margin-bottom: 10px;
 }
 
 .container-subtitulo {
+font-family: "Orbitron", sans-serif;
   font-size: 25px;
-  color: #03e9f4;
+  color:#03e9f4;
   text-align: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin:2px;
 }
 
 .campo-container {
@@ -139,7 +238,7 @@ body {
 .campo-container select {
   width: 100%;
   height: 40px;
-  font-size: 16px;
+  font-size: 14px;
   padding: 10px;
   border: 2px solid rgb(145, 32, 138);
   border-radius: 15px;
@@ -154,35 +253,135 @@ body {
   color: var(--black-cor);
 }
 
+::-webkit-input-placeholder {
+  color: #bebcbc;
+  font-style: italic;
+}
+
 #descricao {
   width: 100%;
+  height: 50px;
+}
+
+.container-input-cadastrar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100px;
+  margin-bottom:1rem;
 }
 
-.salvar {
-  color: rgb(121, 28, 114);
-  background-color: #30e9f4;
-  width: 50%;
-  height: 40px;
+
+.container-input-cadastrar a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #03e9f4;
   font-size: 16px;
-  font-weight: 500;
-  font-weight: bold;
-  border: 2px solid rgb(121, 28, 114);
-  border-radius: 30px;
-  cursor: pointer;
-  transition: 0.3s;
-  margin-top: 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-top: 5px;
+  letter-spacing: 4px;
 }
 
-.salvar:hover {
-  background-color: #b1f3f8;
-  color: var(--black-cor);
+.container-input-cadastrar a:hover {
+  background: #03e9f4;
+  color: #f1eee6;
+  border-radius: 5px;
+  box-shadow: 0 0 10px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4,
+    0 0 200px #03e9f4;
+}
+
+.container-input-cadastrar a span {
+  position: absolute;
+  display: block;
+}
+
+.container-input-cadastrar a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+  animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
+  }
+  50%,
+  100% {
+    left: 100%;
+  }
+}
+
+.container-input-cadastrar span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #03e9f4);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: 0.25s;
+}
+
+@keyframes btn-anim2 {
+  0% {
+    top: -100%;
+  }
+  50%,
+  100% {
+    top: 100%;
+  }
+}
+
+.container-input-cadastrar span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #03e9f4);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: 0.5s;
+}
+
+@keyframes btn-anim3 {
+  0% {
+    right: -100%;
+  }
+  50%,
+  100% {
+    right: 100%;
+  }
+}
+
+.container-input-cadastrar span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #30e9f4);
+  animation: btn-anim4 1s linear infinite;
+  animation-dealy: 0.75s;
+}
+
+@keyframes btn-anim4 {
+  0% {
+    bottom: -100%;
+  }
+  50%,
+  100% {
+    bottom: 100%;
+  }
 }
 
 .return-index {
-  display: flex;
-  justify-content: flex-start;
-  align-self: flex-end;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
   text-align: center;
 }
 
@@ -199,7 +398,10 @@ body {
 /*Seção da tabela do Usuário chamados*/
 
 .tabela-container {
-  margin-top: 20px;
+  margin-top: 40px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .tabela {
@@ -258,8 +460,6 @@ body {
   width: 12%;
 }
 
-/*Seção do footer*/
-
 .footer {
   font-family: "Orbitron", sans-serif;
   background: radial-gradient(
@@ -297,4 +497,23 @@ body {
   border-radius: 2px;
   box-shadow: 0 0 50px #03e9f4;
   padding: 5px;
+}
+
+@media screen and (min-width: 1728px){
+.container-box {
+  top: 30rem;
+  height:650px;
+}
+
+.campo-container input[type="text"],
+.campo-container textarea,
+.campo-container select {
+  height: 50px;
+  font-size: 17px;
+}
+
+#descricao {
+  height: 80px;
+}
+
 }
